# kproj

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: AGENT-HANDOFF.md  CHANGELOG.md  CONTEXT.md  DESIGN.md  GLOSSARY.md  PRD.md  phase4-resolutions.md  phase4-review.md  wave3-review.md
docs/adr/: 0001-inherit-jbom-architectural-patterns.md  0002-jekyll-publisher-scope-a-b-split.md  0003-jbom-separation-read-not-invoke.md  0004-show-what-is-provided-audit-policy.md  0005-writetracker-transactional-site-writes.md  0006-library-shape-boundary-discipline.md  0007-local-cli-v1-ci-deferred.md  0008-ibom-direct-script-invocation.md  0009-kicad-install-locator.md  README.md
docs/phase1/: analysis.json  jbom-reuse-map.md  kicad-metadata-survey.md  site-platform-assessment.md  survey.csv  survey.json
docs/phase1/audit-rerun/: audit.json  audit.py  findings.csv
src/kproj/: __init__.py  cli.py  config.py
src/kproj/application/: __init__.py  publish_workflow.py
src/kproj/common/: __init__.py  content_hash.py  kicad_install.py  kicad_libraries.py  subprocess_runner.py
src/kproj/formatters/: __init__.py  front_matter_summary_formatter.py  markdown_table_formatter.py  stderr_formatter.py
src/kproj/model/: __init__.py  analysis_info.py  export_result.py  finding.py  library_ref.py  project_info.py  publication.py  publish_request.py  publish_result.py  raw_title_block.py  resolved_project.py  severity.py
src/kproj/services/: __init__.py  change_journal.py  design_analyzer.py  fab_packager.py  ibom_generator.py  kicad_project_reader.py  metadata_analyzer.py  pcb_exporter.py  schematic_exporter.py  site_publisher.py  source_packager.py  zip_archiver.py
templates/: Makefile.kicad
tests/: _kicad_fixtures.py
tests/contract/: test_ibom_generator.py  test_kicad_cli_drc.py  test_kicad_cli_erc.py  test_kicad_install_locator.py  test_pcb_exporter.py  test_schematic_exporter.py
tests/features/: batch_safety.feature  drc_erc_mechanical_failure.feature  dry_run.feature  findings_surfaced.feature  metadata_refresh.feature  preflight.feature  private_status.feature  project_resolution.feature  publish.feature  site_repo_cleanliness.feature  verbose.feature
tests/features/steps/: preflight_steps.py  private_status_steps.py  publish_steps.py
tests/fixtures/minimal/: minimal.kicad_pcb  minimal.kicad_sch
tests/unit/: test_cli.py  test_config.py
tests/unit/application/: test_publication_assembly.py  test_publish_workflow.py
tests/unit/common/: test_kicad_install.py  test_kicad_libraries.py  test_subprocess_runner.py
tests/unit/formatters/: test_front_matter_summary_formatter.py  test_markdown_table_formatter.py  test_stderr_formatter.py  test_stubs.py
tests/unit/model/: test_analysis_info.py  test_export_result.py  test_finding.py  test_library_ref.py  test_project_info.py  test_publication.py  test_resolved_project.py  test_severity.py
tests/unit/services/: test_change_journal.py  test_design_analyzer.py  test_fab_packager.py  test_ibom_generator.py  test_kicad_project_reader.py  test_metadata_analyzer.py  test_pcb_exporter.py  test_schematic_exporter.py  test_site_publisher.py  test_source_packager.py  test_stubs.py  test_zip_archiver.py
