[project]
name = "kproj"
version = "0.1.0"
description = "KiCad project Jekyll publisher for the SPCoast site"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "John Plocher" },
]
keywords = ["kicad", "jekyll", "pcb", "release", "spcoast"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    # Phase 6 will add runtime deps as the implementation lands:
    #   "jbom" (for jbom.application.pcb_project_loader + parsing services)
    #   "PyYAML" (for front-matter generation + ~/.kproj.yaml parsing)
    #   "Pillow" (for thumbnail crop, if PNG-render approach wins over SVG-outline)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "behave>=1.2.6",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
kproj = "kproj.cli:main"

[project.urls]
Homepage = "https://github.com/plocher/kproj"
Repository = "https://github.com/plocher/kproj.git"
Issues = "https://github.com/plocher/kproj/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kproj"]
