[project]
name = "kproj"
version = "0.1.0"
description = "KiCad project Jekyll publisher for the SPCoast site"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "John Plocher" },
]
keywords = ["kicad", "jekyll", "pcb", "release", "spcoast"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "PyYAML>=6.0",
    # Phase 6 will add additional runtime deps as the implementation lands:
    #   "jbom" (for jbom.application.pcb_project_loader + parsing services)
    #   "Pillow" (for thumbnail crop, if PNG-render approach wins over SVG-outline)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "behave>=1.2.6",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
kproj = "kproj.cli:main"

[project.urls]
Homepage = "https://github.com/plocher/kproj"
Repository = "https://github.com/plocher/kproj.git"
Issues = "https://github.com/plocher/kproj/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kproj"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests/unit", "tests/contract"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "contract: external-tool contract tests (kicad-cli / iBOM), skipped when tools missing",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["docs/", "templates/"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "SIM",# flake8-simplify
    "RUF",# ruff-specific
]
ignore = [
    "E501",  # line-length is enforced by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/kproj"]
plugins = []
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
