[project]
name = "kproj"
version = "0.1.0"
description = "KiCad project Jekyll publisher for the SPCoast site"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "John Plocher" },
]
keywords = ["kicad", "jekyll", "pcb", "release", "spcoast"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "PyYAML>=6.0",
    # jBOM is consumed as a library-only dependency per ADR 0003.  v7.3.0
    # added the title-block ``comments`` mapping + ``ResolvedPcbProject``
    # ``text_variables`` that kproj's KicadProjectReader.read thin-wraps;
    # bumping the pin below 7.3.0 will break the read pipeline.
    "jbom>=7.3.0",
    # Phase 6 will add additional runtime deps as the implementation lands:
    #   "Pillow" (for thumbnail crop, if PNG-render approach wins over SVG-outline)
]

[tool.uv.sources]
# Local editable path during development — jBOM is the sibling repo on the
# user's machine.  Released kproj wheels will resolve ``jbom`` from PyPI once
# both projects publish there; until then the path source pins us to the
# checked-out tree.
jbom = { path = "../jBOM", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "behave>=1.2.6",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
kproj = "kproj.cli:main"

[project.urls]
Homepage = "https://github.com/plocher/kproj"
Repository = "https://github.com/plocher/kproj.git"
Issues = "https://github.com/plocher/kproj/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kproj"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests/unit", "tests/contract"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "contract: external-tool contract tests (kicad-cli / iBOM), skipped when tools missing",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["docs/", "templates/"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "SIM",# flake8-simplify
    "RUF",# ruff-specific
]
ignore = [
    "E501",  # line-length is enforced by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/kproj"]
plugins = []
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
# jBOM does not publish a ``py.typed`` marker; its types resolve to ``Any``.
# This is acceptable for v1: kproj's KicadProjectReader is the only consumer
# and wraps every jBOM call in a kproj-owned dataclass.  Re-evaluate when
# jBOM ships type stubs.
module = "jbom.*"
ignore_missing_imports = true
